# Story-Writter-CrewAi

./: LICENSE  README.md  pyproject.toml
src/story_writter_crew/: crew.py  main.py
src/story_writter_crew/config/: agents.yaml  tasks.yaml
story/: story.md
