[project]
name = "story_writter_crew"
version = "0.1.0"
description = "story_writter_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.7",
]

[project.scripts]
story_writter_crew = "story_writter_crew.main:run"
run_crew = "story_writter_crew.main:run"
train = "story_writter_crew.main:train"
replay = "story_writter_crew.main:replay"
test = "story_writter_crew.main:test"
run_with_trigger = "story_writter_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
